<resources>
    <string name="app_name">Video Edit</string>
    <string name="select_video">Select Video</string>
    <string name="zero_time">00:00:00</string>
    <string name="play_recorded_audio">Play Recorded Audio</string>
    <string name="start_recording">Start Recording</string>
    <string name="add_recorded_audio_in_selected_video">Add Recorded Audio in Selected Video</string>
    <string name="ok">Ok</string>
    <string name="stop_playing">Stop Playing</string>
    <string name="show_video_details">Show Video Details</string>
    <string name="stop_recording">Recording... Stop Recording?</string>
    <string name="no_recorded_audio_found">No Recorded Audio Found</string>

</resources>